# slam-polygonnet

./: CMakeLists.txt  manifest.xml
src/: AddPointsThread.cpp  Anchor.cpp  Anchor.h  CMakeLists.txt  Face.cpp  Face.h  Fitting.cpp  Fitting.h  Point.cpp  Point.h  RegularTriangularMesh.cpp  RegularTriangularMesh.h  addPointsThread.cpp  anchor.cpp  anchor.h  dataTypes.h  drawingRoutines.cpp  drawingRoutines.h  face.cpp  face.h  fitting.cpp  fitting.h  point.h  polygonnet.pc.in
test/: CMakeLists.txt  Design.cpp  Design.h  Design.ui  camera.cpp  camera.h  glwidget.cpp  glwidget.h  main.cpp  tools.cpp  tools.h  window.cpp  window.h
